docs/posts/network-observability-open5gs/3-loki-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-operators-redhat
  labels:
    openshift.io/cluster-monitoring: "true"
