docs/posts/network-observability-open5gs/4-lokistack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netobserv
