docs/posts/network-observability-open5gs/13-traffic-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator
  namespace: open5gs-control
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-generator
  template:
    metadata:
      labels:
        app: traffic-generator
    spec:
      serviceAccountName: open5gs-sa
      containers:
        - name: traffic-generator
          image: registry.access.redhat.com/ubi9/ubi:latest
          command: ["/bin/bash", "-c"]
          args:
            - |
              [...]
