docs/posts/network-observability-open5gs/9-open5gs-data.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open5gs-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upf
  namespace: open5gs-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upf
  template:
    metadata:
      labels:
        app: upf
    spec:
      serviceAccountName: open5gs-sa
      containers:
        - name: upf
          image: docker.io/gradiant/open5gs:2.7.6
          command: ["open5gs-upfd"]
          args: ["-c", "/etc/open5gs/custom/upf.yaml"]
          ports:
            - containerPort: 8805
              name: pfcp
              protocol: UDP
            - containerPort: 2152
              name: gtpu
              protocol: UDP
          securityContext:
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /etc/open5gs/custom
      volumes:
        - name: config
          configMap:
            name: upf-config
---
apiVersion: v1
kind: Service
metadata:
  name: upf
  namespace: open5gs-data
spec:
  selector:
    app: upf
  ports:
    - port: 8805
      targetPort: 8805
      protocol: UDP
      name: pfcp
    - port: 2152
      targetPort: 2152
      protocol: UDP
      name: gtpu
