docs/posts/network-observability-open5gs/10-block-nrf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-nrf-ingress
  namespace: open5gs-core
spec:
  podSelector:
    matchLabels:
      app: nrf
  policyTypes:
    - Ingress
  ingress: []
